# rutv-admin-telegram-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  agent.py  agent_factory.py  audit.py  config.py  llm.py  llm_factory.py  main.py  main_state.py  mcp_client.py  openai_llm.py  policy.py  telegram_bot.py  telegram_handlers.py  tool_schema.py  webhook_queue.py
app/agent/: runner.py
app/api/: routes.py  server.py
app/core/: config.py  lifecycle.py  state.py  structured_log.py
app/llm/: client.py  factory.py  openai.py
app/mcp/: cache.py  client.py  policy.py  schema.py
app/telegram/: bot.py  handlers.py  queue.py
tests/: test_agent.py  test_audit.py  test_config.py  test_llm.py  test_logging.py  test_main_routes.py  test_mcp_client.py  test_policy_schema.py  test_queue.py  test_telegram.py
