[project]
name = "rutv-admin-bot"
version = "0.1.0"
description = "RuTV Telegram admin bot with FastAPI, configurable LLM, and MCP tool orchestration."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "openai>=1.99,<2",
    "mcp>=1.27,<2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
